<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>practica9_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="leoaran@upv.es">leoaran</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>tf2_sensor_msgs</depend>
  
  <build_depend>nav_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
